Fixed alignment of add button on game-round-list round column header.

--- a/src/app/game/components/game-round-list/game-round-list.component.scss
+++ b/src/app/game/components/game-round-list/game-round-list.component.scss
@@ -1,5 +1,9 @@
 @import "../../../../assets//scss/styles.scss";
 
+th.mat-header-cell > button.mat-icon-button .mat-icon {
+  margin-top: -2px;
+}
+
 tr.mat-footer-row {
   font-weight: bold;
 }
